<resources>
    <string name="app_name">HepsiburadaSeniorProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="media_image">media image</string>
    <string name="release_date">Release Date</string>
    <string name="genre">Genre</string>
    <string name="detail">Detail</string>
    <string name="price">Price</string>
    <string name="find_movies_tv_series_and_more">Find Movies, Tv series, and more..</string>
    <string name="search">Search</string>
    <string name="movies">Movies</string>
    <string name="music">Music</string>
    <string name="apps">Apps</string>
    <string name="books">Books</string>
</resources>