<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.cagrikilic.hepsiburadaseniorproject.SearchViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:background="#15141F">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/header_text_view"
            android:text="@string/find_movies_tv_series_and_more"
            android:fontFamily="@font/lato"
            android:textSize="24sp"
            android:textColor="#FFFF"
            android:layout_marginEnd="68dp"
            android:layout_marginStart="24dp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_edit_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintTop_toBottomOf="@+id/header_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/search"
                android:textColor="@color/white"
                android:layout_weight="0.1"
                android:textColorHint="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#211F30"
                    android:id="@+id/search_edit_text"
                    android:textColor="@color/white"
                    android:layout_gravity="center"/>
            </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_edit_text_layout"
            app:singleSelection="true"
            app:selectionRequired="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_movies"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movies"
                android:checked="true"
                android:imeActionLabel="movie"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_music"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music"
                android:imeActionLabel="song"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_apps"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apps"
                android:imeActionLabel="software"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_books"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/books"
                android:imeActionLabel="ebook"/>
        </com.google.android.material.chip.ChipGroup>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/item_grid"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="6dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup"
            app:spanCount="2"
            tools:itemCount="16"
            tools:listitem="@layout/view_list_item"
            android:layout_marginTop="24dp"/>
<!--        app:listData="@{viewModel.movies}"-->
        <ImageView
            android:id="@+id/status_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:AppApiStatus="@{viewModel.status}"
            android:contentDescription="@string/media_image"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
